# orcs-and-humans

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  build.bat
assets/: .gitkeep
src/: main.cpp
src/engine/core/: Application.cpp  Application.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Time.cpp  Time.h
src/engine/events/: Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
src/engine/graphics/: Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  Camera2D.cpp  Camera2D.h  Sprite.cpp  Sprite.h
src/engine/input/: Input.cpp  Input.h
src/engine/logging/: Logger.cpp  Logger.h
